--- a/AlquilaCar/src/app/componentes/shared/navbar/navbar.component.html
+++ b/AlquilaCar/src/app/componentes/shared/navbar/navbar.component.html
@@ -21,7 +21,7 @@
     <div class="dropdown-menu dropdown-menu-right mt-2 mr-3">
       <div class="login__body"></div>
       <a class="dropdown-item" [routerLink]="['uploadCar']"><span class="text-warning mr-2 oi oi-cloud-upload"></span>Anuncia tu coche</a>
-      <a class="dropdown-item" [routerLink]="['home']"><span class="text-warning mr-2 oi oi-eye"></span>Revisa tus coches subidos</a>
+      <a class="dropdown-item" [routerLink]="['/miscoches']"><span class="text-warning mr-2 oi oi-eye"></span>Revisa tus coches anunciados</a>
       <a class="dropdown-item"[routerLink]="['userData']"><span class="text-warning mr-2 oi oi-pencil"></span>Cambia tus datos</a>
       <div class="dropdown-divider bg-warning"></div>
       <a class="text-danger dropdown-item" [routerLink]="['home']" (click)="logOut()"><span class="mr-2 oi oi-power-standby" aria-hidden="true"></span>Logout</a>
