--- a/AlquilaCar/src/app/componentes/vista-coches/vista-coches.component.html
+++ b/AlquilaCar/src/app/componentes/vista-coches/vista-coches.component.html
@@ -1,41 +1,54 @@
 <div class="container">
-  <div class="container_form d-flex justify-content-end">
-    <div class="search_filter mr-auto p-2">
-      <span class="title_forms">Busca el coche que deseas...</span>
-      <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-warning my-2 my-sm-0" type="submit">Buscar</button>
-      </form>
+  <div class="mb-2 row">
+    <div class="col-md-4 ">
+      <div id="slider">
+        polas
+        <div id="custom-handle" class="ui-slider-handle"></div>
+      </div>
     </div>
-    <div class="select_filter p-2">
-      <span class="title_forms">O bien selecciona una de sus características</span>
-      <form class="form-inline my-2 my-lg-0">
-        <select class="custom-select mr-sm-2" [(ngModel)]="marca_seleccionada" name="marca_search" (change)="searchByMarca()">
+    <div class="row col-md-3 form-check ">
+      <label class="title_forms form-check-label align-self-start p-0">¿Desea ver los coches alquilados?</label>
+      <label class="title_forms form-check-label align-self-end">
+        <input class="form-check-input" type="checkbox" value="" [(ngModel)]="alquilados_seleccionado" name="alquilado_seleccionado" (change)="searchNoAlquilado()">
+        No mostrar coches alquilados
+      </label>
+    </div>
+    <div class=" col-md-5">
+      <form class="row col-md-12 p-0 ml-1 justify-content-around">
+        <label class="col-md-12 title_forms pl-0">O bien selecciona una de sus características</label>
+        <select class="custom-select col-md-3" [(ngModel)]="marca_seleccionada" name="marca_search" (change)="searchByMarca()">
           <option value="" selected>-Marca-</option>
           <option *ngFor="let marca of marcas" value="{{marca.value}}">{{marca.name }}</option>
         </select>
-        <select class="custom-select mr-sm-2" [(ngModel)]="puertas_seleccionadas" name="puertas_search" (change)="searchByPuertas()">
+        <select class="custom-select col-md-4" [(ngModel)]="puertas_seleccionadas" name="puertas_search" (change)="searchByPuertas()">
           <option value="0" selected>-Nº de puertas-</option>
           <option *ngFor="let puerta of puertas" value="{{puerta}}">{{puerta}}</option>
         </select>
-        <select class="custom-select" [(ngModel)]="plazas_seleccionadas" name="plazas_search"(change)="searchByPlazas()">
+        <select class="custom-select col-md-4" [(ngModel)]="plazas_seleccionadas" name="plazas_search"(change)="searchByPlazas()">
           <option value="0" selected>-Nº de plazas-</option>
           <option *ngFor="let plaza of plazas" value="{{plaza}}">{{plaza}}</option>
         </select>
       </form>
     </div>
   </div>
+  <div *ngIf="coches?.length == 0">
+    <div class="alert alert-danger" role="alert">
+      <h4 class="alert-heading">No hay coches disponibles.</h4>
+      <p>Lo sentimos. Para los filtros de busqueda seleccionados no se encuentran coches disponibles</p>
+      <p class="mb-0">Cambia los filtros de búsqueda para encontrar el coche que deseas alquilar. Muchas gracias y sentimos las molestias</p>
+    </div>
+  </div>
   <div class="row">
     <div class="col-sm-3" *ngFor="let coche of coches">
-      <div class="card coche" >
+      <div class="card coche hvr-shrink" >
         <img *ngIf="coche.alquilado == false" class="card-img-top  img-fluid img-coche" src="{{coche.imageurl}}" alt="Card image cap">
         <img *ngIf="coche.alquilado == true" class="card-img-top  img-fluid img-coche-alquilado" src="{{coche.imageurl}}" alt="Card image cap">
         <div *ngIf="coche.alquilado == true" style="position:absolute; top:0; left:0;"><img border="0"  src="../../../assets/alquilado.png" /></div>
-        <div class="text-white bg-inverse p-1 pl-3 pr-3" style="position:absolute; bottom:316px; right:0px;"><span>{{coche.precio}} €</span></div>
+        <div class="text-white bg-inverse p-1 pl-3 pr-3" style="position:absolute; bottom:316px; right:0px;border-radius: 200px 0px 0px 200px;"><span>{{coche.precio}} €</span></div>
         <div class="card-block">
           <h3 class="card-title text-primary">{{coche.marca | capitalize}}</h3>
           <hr class="bg-warning">
-          <h5 class="card-text">{{coche.modelo | capitalize}}</h5>
+          <h5 class="card-text">{{coche?.modelo | capitalize}}</h5>
           <hr class="bg-warning">
           <p class="card-text">Km: {{coche.km | pointReplacer}} Km</p>
           <p class="card-text">Puertas: {{coche.puertas}}</p>
