--- a/AlquilaCar/src/app/componentes/listado-coches/listado-coches.component.html
+++ b/AlquilaCar/src/app/componentes/listado-coches/listado-coches.component.html
@@ -1,3 +1,42 @@
-<p>
-  listado-coches works!
-</p>
+<div class="container row-grid">
+  <div class="row">
+    <div class="col-md-12">
+      <h3 class="text-primary mb-2">
+        Coches subidos por {{username}}
+      </h3>
+    </div>
+    <div *ngIf="mensajeOk != '' " class="alert alert-success alert-dismissible" role="alert">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+      <strong>{{mensajeOk}} </strong>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+      <table class="table table-responsive-sm bg-warning">
+        <thead class="thead-inverse">
+        <tr>
+          <th>Foto</th>
+          <th>Marca</th>
+          <th>Modelo</th>
+          <th>Estado del alquiler</th>
+          <th>Eliminar</th>
+        </tr>
+        </thead>
+        <tbody *ngFor="let coche of arrayCoches">
+        <tr class=" text-primary">
+          <td><a [routerLink]="['/coche', coche.id]"><img class="img-coche hvr-shrink" src="{{coche.imageurl}}" alt="Card image cap"></a></td>
+          <td><b>{{coche.marca | capitalize}}</b></td>
+          <td><b>{{coche.modelo | capitalize}}</b></td>
+          <td>
+            <button *ngIf="coche.alquilado == true" (click)="cambiaAlquilado(coche.id, false)" type="button" class="col-7 btn btn-danger">Dejar de alquilar</button>
+            <button *ngIf="coche.alquilado == false" (click)="cambiaAlquilado(coche.id, true)" type="button" class="col-7 btn btn-success">Alquilar</button>
+          </td>
+          <td><button type="button" class="btn btn-danger" (click)="borrarCoche(coche.id)">Eliminar</button></td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
