--- a/AlquilaCar/src/app/componentes/vista-coches/vista-coches.component.html
+++ b/AlquilaCar/src/app/componentes/vista-coches/vista-coches.component.html
@@ -1,10 +1,7 @@
 <div class="container">
   <div class="mb-2 row">
     <div class="col-md-4 ">
-      <div id="slider">
-        <div>Default pagination</div>
-        <ngb-pagination [collectionSize]="coches.length" [(page)]="page" aria-label="Default pagination"></ngb-pagination>
-      </div>
+      <pagination-controls previousLabel="Anterior" nextLabel="Siguiente" class="align-self-center" (pageChange)="p = $event"></pagination-controls>
     </div>
     <div class="row col-md-3 form-check ">
       <label class="title_forms form-check-label align-self-start p-0">¿Desea ver los coches alquilados?</label>
@@ -39,8 +36,8 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-sm-3" *ngFor="let coche of coches; let i = index">
-      <div class="card coche hvr-shrink" *ngIf="i < page * 10;">
+    <div class="col-sm-3" *ngFor="let coche of coches | paginate: { itemsPerPage: 10, currentPage: p }">
+      <div class="card coche hvr-shrink" >
         <img *ngIf="coche.alquilado == false" class="card-img-top  img-fluid img-coche" src="{{coche.imageurl}}" alt="Card image cap">
         <img *ngIf="coche.alquilado == true" class="card-img-top  img-fluid img-coche-alquilado" src="{{coche.imageurl}}" alt="Card image cap">
         <div *ngIf="coche.alquilado == true" style="position:absolute; top:0; left:0;"><img border="0"  src="../../../assets/alquilado.png" /></div>
