--- a/AlquilaCar/src/app/componentes/vista-coches/vista-coches.component.css
+++ b/AlquilaCar/src/app/componentes/vista-coches/vista-coches.component.css
@@ -16,15 +16,22 @@
   flex-wrap: wrap;
 }
 .coche{
-  -webkit-animation: fadein 1s;
-  -moz-animation: fadein 1s;
-  -ms-animation: fadein 1s;
-  -o-animation: fadein 1s;
-  animation: fadein 1s;
+  -webkit-animation: fadein 2s;
+  -moz-animation: fadein 2s;
+  -ms-animation: fadein 2s;
+  -o-animation: fadein 2s;
+  animation: fadein 2s;
 }
 .row > div[class*='col-'] {
   display: flex;
   margin-bottom: 1em;
+}
+.todo {
+  -webkit-animation: fadein 2s;
+  -moz-animation: fadein 2s;
+  -ms-animation: fadein 2s;
+  -o-animation: fadein 2s;
+  animation: fadein 2s;
 }
 @keyframes fadein {
   from { opacity: 0; }
