--- a/AlquilaCar/src/app/componentes/user-changes/user-changes.component.html
+++ b/AlquilaCar/src/app/componentes/user-changes/user-changes.component.html
@@ -136,7 +136,22 @@
   </div>
   <div class="row justify-content-end">
     <button type="button" (click)="enviarCambioDeContrasenia()" class="btn btn-primary col-md-3 mt-4 mr-5 mb-5">Cambiar contraseña</button>
-    <button type="button" class="btn btn-danger col-md-3 mt-4 mb-5">Eliminar usuario</button>
+    <button type="button" class="btn btn-danger col-md-3 mt-4 mb-5" (click)="open(content) ">Eliminar usuario</button>
   </div>
-
+  <ng-template #content let-c="close" let-d="dismiss">
+    <div class="modal-header">
+      <h4 class="modal-title">Eliminar usuario</h4>
+      <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+      <p>¿Esta seguro que desea eliminar el usuario?</p>
+      <p>Si eliminas el usuario ya no podras volver a autenticarte ne la aplicacion</p>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-danger" (click)="c('borrar')">Eliminar</button>
+      <button type="button" class="btn btn-primary" (click)="c('Close click')">Close</button>
+    </div>
+  </ng-template>
 </div>
